CallMD/src/objects/Immunization__c.object
<CustomObject>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Immunization__c</fullName>
        <label>Immunization</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>BCG</fullName>
                </value>
                <value>
                    <fullName>Cholera</fullName>
                </value>
                <value>
                    <fullName>DPT(Diptheria,Pertussis,Teanus)</fullName>
                </value>
                <value>
                    <fullName>FLU</fullName>
                </value>
                <value>
                    <fullName>Hepatitis A</fullName>
                </value>
                <value>
                    <fullName>Hepatitis B</fullName>
                </value>
                <value>
                    <fullName>HIB(haemophilus B conjugate)</fullName>
                </value>
                <value>
                    <fullName>HPV</fullName>
                </value>
                <value>
                    <fullName>Measles Booster</fullName>
                </value>
                <value>
                    <fullName>MMR(measles,mumps,rubella)</fullName>
                </value>
                <value>
                    <fullName>Pneumovax</fullName>
                </value>
                <value>
                    <fullName>Polio</fullName>
                </value>
                <value>
                    <fullName>Tetanus Booster</fullName>
                </value>
                <value>
                    <fullName>Typhoid</fullName>
                </value>
                <value>
                    <fullName>Varicella</fullName>
                </value>
                <value>
                    <fullName>Yellow Fever</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Immunizations</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Immunization</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Immunization__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>IMID-{0000}</displayFormat>
        <label>Immunization ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Immunizations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>